[package]
name = "utc-datetime"
version = "0.1.10"
authors = ["tantalum73 <c3qu@qq.com>"]
edition = "2018"
license = "MIT"
description = "Return timestamp of UTC datetime,Convert time string to UTC datetime"
readme = "README.md"
documentation="https://docs.rs/utc-datetime"

keywords = ["datetime"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
